Created each animal and moved all constants to a seperate config class sytem. TODO: work on time scaling and parameter tuning